# CSW-Tenant-Insights

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.build-tools/: style.css  style.html
docs/: RUNBOOK.md
examples/: acme-2026-05-01.json  customer1-2026-05-01.json  drhorton-2026-05-01.json
examples/sample-reports/: compare-acme-vs-customer1.docx  compare-acme-vs-customer1.html
examples/sample-reports/acme/: CSW-POV-Findings-acme.docx  CSW-POV-Findings-acme.html  CSW-Posture-Brief-acme.docx  CSW-Posture-Brief-acme.html
examples/sample-reports/customer1/: CSW-POV-Findings-customer1.docx  CSW-POV-Findings-customer1.html  CSW-Posture-Brief-customer1.docx  CSW-Posture-Brief-customer1.html
flavors/ciso/: __init__.py  render.py  template.md.j2
flavors/pov/: __init__.py  render.py  template.md.j2
insights/: __init__.py  actions.py  bundle.py  framework_map.py  posture.py  risks.py  wins.py
scripts/: demo.sh
tenants/_template/: config.yaml
tenants/acme/: config.yaml
tenants/customer1/: config.yaml
tenants/drhorton/: config.yaml
tools/: build_reports.py  cli.py
